Fixed description overlapping

--- a/src/common/typo/index.scss
+++ b/src/common/typo/index.scss
@@ -16,5 +16,8 @@
         font-family: "Roboto", sans-serif;
         margin-top: 7px;
         margin-left: 2px;
+        white-space: unset;
+        overflow: unset;
+        text-overflow: unset;
     }
 }
